--- a/install/kubernetes/helm/meshery/crds/crds.yaml
+++ b/install/kubernetes/helm/meshery/crds/crds.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  name: brokers.cloud.layer5.io
+  name: brokers.meshery.layer5.io
 spec:
-  group: cloud.layer5.io
+  group: meshery.layer5.io
   names:
     kind: Broker
     listKind: BrokerList
@@ -113,9 +113,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  name: meshsyncs.cloud.layer5.io
+  name: meshsyncs.meshery.layer5.io
 spec:
-  group: cloud.layer5.io
+  group: meshery.layer5.io
   names:
     kind: MeshSync
     listKind: MeshSyncList
