--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,8 @@
     "export": "next export",
     "export-playground": "PLAYGROUND=true next export -o playground",
     "test:e2e": "PLAYWRIGHT_JSON_OUTPUT_NAME=results.json npx playwright test --reporter json",
-    "test:e2e:ci": "npx playwright test --project=chromium --reporter=./tests/e2e/custom-playwright-reporter.js",
-    "test:e2e:chromium": "npx playwright test --project=chromium",
+    "test:e2e:ci": "npx playwright test --project=chromium-local-provider --project=chromium-meshery-provider --reporter=./tests/e2e/custom-playwright-reporter.js",
+    "test:e2e:chromium": "npx playwright test --project=chromium-local-provider",
     "test:e2e:codegen": "npx playwright codegen --load-storage=playwright/.auth/user.json http://localhost:9081/extension/meshmap",
     "test:e2e:fast": "npx playwright test --project=chromium --grep-invert @slow",
     "test:coverage": "npm run test -- --coverage",
@@ -120,7 +120,7 @@
     "@babel/eslint-parser": "^7.22.11",
     "@babel/types": "^7.23.5",
     "@next/eslint-plugin-next": "^13.1.2",
-    "@playwright/test": "^1.44.0",
+    "@playwright/test": "^1.48.1",
     "@types/node": "^20.12.12",
     "ajv": "^8.12.0",
     "babel-loader": "^9.1.2",
