ci: disable e2e comment for fork pr
Signed-off-by: Jerens Soerjadi Lensun <jerensslensun@gmail.com>

--- a/.github/workflows/comment-e2e-test.yml
+++ b/.github/workflows/comment-e2e-test.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   e2e-test-reporter:
+    if: github.repository == 'meshery/meshery'
     runs-on: ubuntu-latest
     steps:
     - name: Download e2e test report artifact
