--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,7 @@
     "export": "next export",
     "export-playground": "PLAYGROUND=true next export -o playground",
     "test:e2e": "PLAYWRIGHT_JSON_OUTPUT_NAME=results.json npx playwright test --reporter json",
-    "test:e2e:ci": "npx playwright test --project=chromium-local-provider --project=chromium-meshery-provider --reporter=./tests/e2e/custom-playwright-reporter.js",
+    "test:e2e:ci": "npx playwright test --project=chromium-local-provider --project=chromium-meshery-provider",
     "test:e2e:chromium": "npx playwright test --project=chromium-local-provider",
     "test:e2e:codegen": "npx playwright codegen --load-storage=playwright/.auth/user.json http://localhost:9081/extension/meshmap",
     "test:e2e:fast": "npx playwright test --project=chromium --grep-invert @slow",
