remove redundancy in Docs
Signed-off-by: eyeaadil <madil9227583@gmail.com>

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 ruby '3.2.2'
 
-#gem 'bundler', '= 2.4.14'
+gem 'bundler', '= 2.4.14'
 
 # Hello! This is where you manage which Jekyll version is used to run.
 # When you want to use a different version, change it below, save the
@@ -11,7 +11,8 @@ ruby '3.2.2'
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-# gem "jekyll", "3.2.1"
+gem "jekyll", "~> 3.7"
+
 
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 # gem "minima"
@@ -28,6 +29,7 @@ group :graphqlDocs_plugins do
  gem "rails"
  gem "graphql-docs"
  gem "haml"
+ 
 
 end
 
