--- a/.github/workflows/test_adapters.yaml
+++ b/.github/workflows/test_adapters.yaml
@@ -152,13 +152,13 @@ jobs:
       - name: Pattern apply
         run: |
           cat ./${{ inputs.patternfile_name }}
-          mesheryctl pattern apply -f ./${{ inputs.patternfile_name }}
+          mesheryctl design apply -f ./${{ inputs.patternfile_name }}
       - name: Sleep 120 seconds
         run: sleep 120
       - name: Pattern apply, second iteration. [IDEMPOTENT]
         run: |
           cat ./${{ inputs.patternfile_name }}
-          mesheryctl pattern apply -f ./${{ inputs.patternfile_name }}
+          mesheryctl design apply -f ./${{ inputs.patternfile_name }}
       - name: Check adapter logs
         run: |
           podname=$(kubectl get pods -n meshery | grep ${{ inputs.adapter_name }} | tr -s ' ' | cut -d " " -f 1)
