--- a/.github/workflows/test_adaptersv2.yaml
+++ b/.github/workflows/test_adaptersv2.yaml
@@ -173,14 +173,14 @@ jobs:
       - name: Pattern apply
         run: |
           cat ./${{ inputs.patternfile_name }}
-          mesheryctl pattern apply -f ./${{ inputs.patternfile_name }}
+          mesheryctl design apply -f ./${{ inputs.patternfile_name }}
 
       - name: Sleep 120 seconds
         run: sleep 120
       - name: Pattern apply, second iteration. [IDEMPOTENT]
         run: |
           cat ./${{ inputs.patternfile_name }}
-          mesheryctl pattern apply -f ./${{ inputs.patternfile_name }}
+          mesheryctl design apply -f ./${{ inputs.patternfile_name }}
       - name: Check adapter logs
         run: |
           if [ "${{ inputs.adapter_name }}" != "meshery" ];then
