[Chore] Move /go.mod /go.sum to /server/ directory
Signed-off-by: SAGNIK PAL <palsagnik2102@gmail.com>

--- a/.github/workflows/go-mod-sync.yaml
+++ b/.github/workflows/go-mod-sync.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - "master"
     paths:
-      - "go.mod"
+      - "server/go.mod"
 jobs:
   sync:
     if: github.repository == 'meshery/meshery'
