--- a/.github/workflows/cncf-playground-reset.yaml
+++ b/.github/workflows/cncf-playground-reset.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: Cluster cleanup by running the cleanup script inside VM
       uses: appleboy/ssh-action@master
       with:
-          host: secrets.METAL_SERVER1
+          host: ${{ secrets.METAL_SERVER1 }}
           username: root
           key: ${{ secrets.METAL_SSH_KEY }}
           script: |
