--- a/ui/package.json
+++ b/ui/package.json
@@ -106,6 +106,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.0",
     "relay-runtime": "^15.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^7.8.1",
     "styled-jsx": "^5.1.2",
     "tar": "^7.4.3",
